--- a/index.html
+++ b/index.html
@@ -1,13 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<script src="script.js"></script>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Document</title>
+  </head>
+  <script src="script.js"></script>
+  <body>
+    <div class="main-container">
+      <div class="title-container">
+        <h1 class="main-title">Rock , Paper and Scissors!!</h1>
+      </div>
+    </div>
+    <div class="names">
+      <p class="computer-name">Computer!</p>
+      <p class="player-name">Hernan!</p>
+    </div>
+    <ul class="game-counter">
+      <li class="player-counter">1</li>
+      <li class="computer-counter">2</li>
+    </ul>
+    <div class="play-btn">
+      <button class="rock-btn">Rock</button>
+      <button class="paper-btn">Paper</button>
+      <button class="scissors-btn">Scissors</button>
+    </div>
+  </body>
 </html>
