added submit button and css

--- a/index.html
+++ b/index.html
@@ -23,9 +23,14 @@
       <li class="computer-counter">2</li>
     </ul>
     <div class="play-btn">
-      <button class="rock-btn">Rock</button>
-      <button class="paper-btn">Paper</button>
-      <button class="scissors-btn">Scissors</button>
+      <a href="#" class="btn-class rock-btn">Rock</a>
+      <a href="#" class="btn-class paper-btn">Paper</a>
+      <a href="#" class="btn-class scissors-btn">Scissors</a>
+    </div>
+    <div class="name-container">
+      <label class="text-label" for="text-name">Type Your Name: </label>
+      <input type="text" name="text-name" class="text-name" />
+      <a href="#" class="submit-name btn-class">Submit</a>
     </div>
   </body>
 </html>
