added logic to the game, deleted start game button, fixed small stuff

--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
       </div>
     </div>
     <div class="names">
-      <p class="computer-name">Computer!</p>
       <p class="player-name">Hernan!</p>
+      <p class="computer-name">Computer</p>
     </div>
     <ul class="game-counter">
-      <li class="player-counter">1</li>
-      <li class="computer-counter">2</li>
+      <li class="player-counter">0</li>
+      <li class="computer-counter">0</li>
     </ul>
+    <div class="game-logs">
+      <p class="logs"></p>
+    </div>
     <div class="play-btn">
-      <a href="#" class="btn-class rock-btn">Rock</a>
-      <a href="#" class="btn-class paper-btn">Paper</a>
-      <a href="#" class="btn-class scissors-btn">Scissors</a>
+      <a href="#" class="btn-class rock-btn btn-game">Rock</a>
+      <a href="#" class="btn-class paper-btn btn-game">Paper</a>
+      <a href="#" class="btn-class scissors-btn btn-game">Scissors</a>
     </div>
     <div class="name-container">
       <label class="text-label" for="text-name">Type Your Name: </label>
