added logs style, added reset button logic, added footer with link to github

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="names">
-      <p class="player-name">Hernan!</p>
+      <p class="player-name">Player!</p>
       <p class="computer-name">Computer</p>
     </div>
     <ul class="game-counter">
@@ -22,6 +22,7 @@
       <li class="computer-counter">0</li>
     </ul>
     <div class="game-logs">
+      <p class="log-title">Logs:</p>
       <p class="logs"></p>
     </div>
     <div class="play-btn">
@@ -33,7 +34,11 @@
       <label class="text-label" for="text-name">Type Your Name: </label>
       <input type="text" name="text-name" class="text-name" />
       <a href="#" class="submit-name btn-class">Submit</a>
+      <a href="#" class="btn-class reset-game">Reset Game</a>
     </div>
+    <footer class="main-footer">
+      <p class="link-footer">Made by <a class="link-github" href="http://github.com/hditano" target="_blank" rel="noopener noreferrer">Hernan Di Tano</a></p>
+    </footer>
     <script src="script.js"></script>
   </body>
 </html>
